try to ignore my type check

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -760,6 +760,10 @@ issues:
       linters:
         - typecheck
 
+    - path: opt/hostedtoolcache/
+      linters:
+        - typecheck
+
     - path: include/       # for excluding directories, e.g., vendor directory
       linters:
         - nlreturn
