--- a/deploy/stackit/Chart.yaml
+++ b/deploy/stackit/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes
+appVersion: "v0.3.1"
+description: A Helm chart for stackitcloud/stackit-cert-manager-webhook
 name: stackit-cert-manager-webhook
-version: 0.3.2
+version: 0.3.3
