--- a/deploy/stackit/values.yaml
+++ b/deploy/stackit/values.yaml
@@ -23,8 +23,8 @@ certManager:
 image:
   # -- repository of the image.
   repository: ghcr.io/stackitcloud/stackit-cert-manager-webhook
-  # -- tag of the image.
-  tag: v0.3.1
+  # Overrides the image tag whose default is {{ .Chart.AppVersion }}
+  tag: ""
   # -- pull policy of the image.
   pullPolicy: IfNotPresent
 
