--- a/deploy/stackit/values.yaml
+++ b/deploy/stackit/values.yaml
@@ -27,6 +27,8 @@ image:
   tag: ""
   # -- pull policy of the image.
   pullPolicy: IfNotPresent
+# This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+imagePullSecrets: []
 
 # -- Webhook configuration.
 nameOverride: ""
