Update CODEOWNERS to stackit.cloud

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 * patrick.koss@stackit.cloud
-* marius.galm@mail.schwarz
+* marius.galm@stackit.cloud
 * simon.stier@stackit.cloud
 * florian.sandel@stackit.cloud
