introducing idempotency through files attached to each make target that allow make building a dependency graph

--- a/local-setup/Makefile
+++ b/local-setup/Makefile
@@ -1,30 +1,37 @@
 CLUSTER_NAME := stackit-webhook-dev
 KUBECONFIG ?= $(HOME)/.kube/config # supposed to be the kind kubeconfig
 GROUP_NAME := acme.stackit.de
+STAMPS_DIR := .make_stamps
+CERTS_DIR := certs
 
 ## -- Foundation --
 
 CERT_MANAGER_VERSION := v1.13.3
 
-.PHONY: cluster-up
-cluster-up:
+$(STAMPS_DIR):
+	@mkdir -p "$(STAMPS_DIR)"
+
+$(STAMPS_DIR)/.cluster-up: | $(STAMPS_DIR)
 	@echo "spinning up kind cluster..."
 	kind create cluster --name $(CLUSTER_NAME)
+	@touch $@
 
 .PHONY: cluster-down
 cluster-down:
 	@echo "destroying kind cluster..."
 	kind delete cluster --name $(CLUSTER_NAME)
+	@rm -rf $(STAMPS_DIR)
+	@rm -rf $(CERTS_DIR)
 
-.PHONY: install-cert-manager
-install-cert-manager:
+$(STAMPS_DIR)/.cert-manager-ready: $(STAMPS_DIR)/.cluster-up
 	@echo "installing cert-manager..."
 	kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/$(CERT_MANAGER_VERSION)/cert-manager.yaml
 	@echo "waiting for cert-manager pods to be ready..."
 	kubectl wait --namespace cert-manager \
-		--for=condition=ready pod \
+		--for=condition=Available deployment \
 		--all \
 		--timeout=90s
+	@touch $@
 
 ## -- "Helm Hijack" Local Dev Setup --
 
@@ -32,7 +39,12 @@ HELM_CHART_PATH ?= ../deploy/stackit
 RELEASE_NAME ?= stackit-webhook
 NAMESPACE ?= cert-manager
 
-setup-local-helm:
+
+$(STAMPS_DIR)/.helm-setup-ready: $(STAMPS_DIR)/.cert-manager-ready
+	@echo "0. cleaning up previously hacked resources to avoid Helm conflicts..."
+	@kubectl delete apiservice v1alpha1.acme.stackit.de --ignore-not-found
+	@kubectl delete svc -n $(NAMESPACE) -l release=$(RELEASE_NAME) --ignore-not-found
+
 	@echo "1. installing the official helm chart (replicas=0)..."
 	helm upgrade --install $(RELEASE_NAME) $(HELM_CHART_PATH) \
 		--namespace $(NAMESPACE) \
@@ -60,32 +72,23 @@ setup-local-helm:
 	@echo "5. waiting for certificate generation and patching APIService..."
 	@kubectl wait --namespace $(NAMESPACE) --for=condition=ready certificate local-dev-webhook-cert --timeout=60s
 	@kubectl annotate apiservice v1alpha1.$(GROUP_NAME) cert-manager.io/inject-ca-from=$(NAMESPACE)/local-dev-webhook-cert --overwrite
+	@echo "✅ helm setup complete!"
+	@touch $@
 
-	@echo "6. extracting the perfect certificates to ./certs/..."
-	@mkdir -p certs
-	@kubectl get secret local-dev-webhook-tls -n $(NAMESPACE) --template='{{ index .data "tls.crt" | base64decode }}' > certs/tls.crt
-	@kubectl get secret local-dev-webhook-tls -n $(NAMESPACE) --template='{{ index .data "tls.key" | base64decode }}' > certs/tls.key
+$(CERTS_DIR)/tls.crt $(CERTS_DIR)/tls.key: $(STAMPS_DIR)/.helm-setup-ready
+	@echo "extracting the certificates to ./certs/..."
+	@mkdir -p $(CERTS_DIR)
+	@kubectl get secret local-dev-webhook-tls -n $(NAMESPACE) --template='{{ index .data "tls.crt" | base64decode }}' > $(CERTS_DIR)/tls.crt
+	@kubectl get secret local-dev-webhook-tls -n $(NAMESPACE) --template='{{ index .data "tls.key" | base64decode }}' > $(CERTS_DIR)/tls.key
 
-	@echo "✅ helm setup complete! you can now run the webhook locally."
 
 ## -- Run the Webhook Locally --
 
 # note: if you run the makefile from a subdirectory but execute from root, adjust this to local-setup/certs
-CERTS_DIR := certs
 WEBHOOK_ENTRYPOINT := ../cmd/webhook/main.go
 
 .PHONY: run-webhook
-run-webhook:
-	@echo "pre-flight check: verifying local certificates..."
-	@if [ ! -f "$(CERTS_DIR)/tls.crt" ] || [ ! -f "$(CERTS_DIR)/tls.key" ]; then \
-		echo "❌ error: certificates not found in $(CERTS_DIR)/. please run 'make setup-local-helm' first."; \
-		exit 1; \
-	fi
-	@echo "pre-flight check: verifying kubeconfig..."
-	@if [ ! -f "$(KUBECONFIG)" ]; then \
-		echo "❌ error: kubeconfig not found at $(KUBECONFIG). did you run 'make cluster-up'?"; \
-		exit 1; \
-	fi
+run-webhook: $(CERTS_DIR)/tls.crt $(CERTS_DIR)/tls.key
 	@echo "🚀 starting stackit webhook locally on port 8443..."
 	GROUP_NAME=$(GROUP_NAME) go run $(WEBHOOK_ENTRYPOINT) \
 		--tls-cert-file=$(CERTS_DIR)/tls.crt \
